--- a/cex-local-store-checker.yml
+++ b/cex-local-store-checker.yml
@@ -148,18 +148,21 @@ data:
       4974365615550ab #Ristar w/ man
       3455198003826ab #SeparationAnxiety w/ man
       5023843024816ab #Spider-Man/X-Men w/ man
-      ssegmd013ab #Spider-Man1995 w/ man
       4012927055113 #MGR-CE
       4974365615390ab #StreetsofRage3 w/
       sps1g349ab #Resident Evil Directors Cut w/ man
       5020717500032ab #Skeleton Krew
-      4974365610272ab #Decap Attack
       5030935111248 #Mass Effect Trilogy
       711719190950 #GT5 CE
       3391891965149 #TekkenTagTourn CE
       5026555408097 #Max Payne CE
       4974365610425B #Ecco (for boxes)
       sps1g627ab #Tomb Raider w/ man
+      5055060927427 #AsurasWrath
+      023272010683 #MonkeyIsland
+      4005209166089 #DarkSiders2 CE
+      3700577002717 #Splatterhouse
+      5055277025923 #Persona4ArenaUltimax
 
 ---
 apiVersion: v1
