--- a/.github/workflows/stockcheck.yml
+++ b/.github/workflows/stockcheck.yml
@@ -4,8 +4,8 @@ name: StockCheck
 
 # Controls when the workflow will run
 on:
-  #schedule:
-  #  - cron: "0 * * * *"   # <=== Change this value
+  schedule:
+    - cron: "0 * * * *"   # <=== Change this value
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
